Add top bar to some pages Update words for waiting pages Update text in life skills

--- a/code/templates/Account.html
+++ b/code/templates/Account.html
@@ -144,7 +144,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="Aboutus.html" class="nav-link">
+                                    <a href="aboutus.html" class="nav-link">
                                         <img src="../static/img/sheet.png" alt="">
                                         <div class="text">
                                             <h5>About Us</h5>
