--- a/code/templates/blog-grid-two.html
+++ b/code/templates/blog-grid-two.html
@@ -34,7 +34,7 @@
     <div class="body_wrapper">
         <nav class="navbar navbar-expand-lg menu_one" id="sticky">
             <div class="container">
-                <a class="navbar-brand sticky_logo" href="index.html">
+                <a class="navbar-brand sticky_logo" href="/index">
                     <img src="../static/img/logo-w.png" srcset="../static/img/logo-w2x.png 2x" alt="logo">
                     <img src="../static/img/logo.png" srcset="../static/img/logo-2x.png 2x" alt="logo">
                 </a>
@@ -58,7 +58,7 @@
                             <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true" data-toggle="dropdown"></i>
                             <ul class="dropdown-menu">
-                               <li class="nav-item"><a href="index.html" class="nav-link">Light Knowledgebase</a></li>
+                               <li class="nav-item"><a href="/index" class="nav-link">Light Knowledgebase</a></li>
                                 <li class="nav-item"><a href="index-helpdesk.html" class="nav-link">Help Desk</a></li>
                             <li class="nav-item"><a href="index-3.html" class="nav-link">Cool Knowledgebase</a> </li>
                             </ul>
@@ -271,7 +271,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="index.html" class="nav-link">
+                                    <a href="/index" class="nav-link">
                                         <img src="../static/img/shopping-bag.png" alt="">
                                         <div class="text">
                                             <h5>Docenvato</h5>
@@ -280,7 +280,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="index.html" class="nav-link">
+                                    <a href="/index" class="nav-link">
                                         <img src="../static/img/gear.png" alt="">
                                         <div class="text">
                                             <h5>Tools</h5>
