--- a/code/templates/blog.html
+++ b/code/templates/blog.html
@@ -54,7 +54,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav menu ml-auto">
                         <li class="nav-item dropdown submenu">
-                            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
+                            <a href="/index" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
                                aria-haspopup="true" aria-expanded="false">Home</a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true"
                                data-toggle="dropdown"></i>
