--- a/code/templates/forum-single1.html
+++ b/code/templates/forum-single1.html
@@ -139,7 +139,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="Aboutus.html" class="nav-link">
+                                    <a href="aboutus.html" class="nav-link">
                                         <img src="../static/img/sheet.png" alt="">
                                         <div class="text">
                                             <h5>About Us</h5>
@@ -614,7 +614,7 @@
                         <div class="f_widget link_widget pl_30 wow fadeInUp" data-wow-delay="0.2s">
                             <h3 class="f_title">Company</h3>
                             <ul class="list-unstyled link_list">
-                                <li><a href="Aboutus.html">About Us</a></li>
+                                <li><a href="aboutus.html">About Us</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
 
 <!--                                <li><a href="#">Careers</a></li>-->
