--- a/code/templates/forum-single.html
+++ b/code/templates/forum-single.html
@@ -209,7 +209,7 @@
                             <div class="col-lg-9">
                                 <div class="forum-post-top">
                                     <a class="author-avatar" href="#">
-                                        <img id="avatar" src="" alt="user avatar">
+                                        <img id="avatar" src="../static/images/chiikawa.jpg" alt="user avatar">
                                     </a>
                                     <div class="forum-post-author">
                                         <a class="author-name" href="#" id="username">  </a>
@@ -290,7 +290,7 @@
                                 <div class="col-lg-9">
                                     <div class="forum-post-top">
                                         <a class="author-avatar" href="#">
-                                            <img src="../static/img/forum/author-avatar.png" alt="">
+                                            <img src="../static/images/chiikawa.jpg" alt="">
                                         </a>
                                         <div class="forum-post-author">
                                             <a class="author-name" href="#" id="username"> </a>
@@ -348,7 +348,7 @@
                             <div class="forum-comment">
                                 <div class="forum-post-top">
                                     <a class="author-avatar" href="#">
-                                        <img src="../static/img/forum/author-avatar.png" alt="author avatar">
+                                        <img src="../static/images/chiikawa.jpg" alt="author avatar">
                                     </a>
                                     <div class="forum-post-author">
                                         <a class="author-name" href="#">Eh Jewel</a>
@@ -379,7 +379,7 @@
                             <div class="forum-comment">
                                 <div class="forum-post-top">
                                     <a class="author-avatar" href="#">
-                                        <img src="../static/img/forum/author-avatar-2.jpg" alt="author avatar">
+                                        <img src="../static/images/chiikawa.jpg" alt="author avatar">
                                     </a>
                                     <div class="forum-post-author">
                                         <a class="author-name" href="#">Parsley Montana</a>
@@ -410,7 +410,7 @@
                             <div class="forum-comment">
                                 <div class="forum-post-top">
                                     <a class="author-avatar" href="#">
-                                        <img src="../static/img/forum/author-avatar-3.jpg" alt="author avatar">
+                                        <img src="../static/images/chiikawa.jpg" alt="author avatar">
                                     </a>
                                     <div class="forum-post-author">
                                         <a class="author-name" href="#">Giles Posture</a>
@@ -441,7 +441,7 @@
                             <div class="forum-comment">
                                 <div class="forum-post-top">
                                     <a class="author-avatar" href="#">
-                                        <img src="../static/img/forum/author-avatar.png" alt="author avatar">
+                                        <img src="../static/images/chiikawa.jpg" alt="author avatar">
                                     </a>
                                     <div class="forum-post-author">
                                         <a class="author-name" href="#">Norman Gordon</a>
@@ -655,7 +655,7 @@ fetch(`/get_user_info_by_id?user_id=${user_id}`)
 
             // 设置头像图片，如果没有头像，则使用默认头像
             const avatarImg = document.getElementById("avatar");
-            avatarImg.src = data.avatar || '../static/photo/default_avatar.png';  // 设置头像路径
+            avatarImg.src = data.avatar || '../static/images/chiikawa.jpg';  // 设置头像路径
 
             // 如果有其他信息，也可以进行类似的更新
             // 例如，更新邮箱、手机号等
