--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -153,7 +153,7 @@
         </nav>
 
     <!--                anto change the pages-->
-    <section class="carousel-section" style="padding: 50px 0; background-color: #f8f9fa;">
+    <section class="carousel-section" style="padding: 50px 0; background-color: #FFE4E1;">
         <div class="container">
             <div class="section_title text-center">
                 <h2 class="h_title wow fadeInUp">Main Function</h2>
@@ -169,13 +169,13 @@
                     </div>
                     <div class="carousel-item">
                         <a href="#">
-                            <img src="../static/img/Blog.png" alt="Forum">
+                            <img src="../static/img/Forum-2.png" alt="Forum">
                             <h3>Forum</h3>
                         </a>
                     </div>
                     <div class="carousel-item">
                         <a href="#">
-                            <img src="../static/img/Blog_2.png" alt="Job Recommendation">
+                            <img src="../static/img/Job.jpg" alt="Job Recommendation">
                             <h3>Job Recommendation</h3>
                         </a>
                     </div>
@@ -272,7 +272,7 @@
                 <div class="col-lg-4 col-sm-6">
 <!--                    here is forum link-->
                     <div class="categories_guide_item wow fadeInUp" data-wow-delay="0.2s">
-                        <img src="../static/img/home_two/info.png" alt="">
+                        <img src="../static/img/com_2.png" alt="">
                         <div class="doc_tag_title">
                             <h4>Forum</h4>
                         </div>
@@ -353,95 +353,95 @@
 
 
 <!--    section for displaying Blog-->
-    <section class="theme_doc_area bg_color sec_pad">
-        <div class="container">
-            <div class="section_title text-center">
-                <h2 class="h_title wow fadeInUp">Blog</h2>
-                <p class="wow fadeInUp" data-wow-delay="0.2s">An official blog about women's physical health and life skills</p>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-sm-6">
-                    <div class="media theme_doc_item wow fadeInUp">
-                        <img src="../static/img/home_two/cloud1.png" alt="">
-                        <div class="media-body">
-                            <a href="life-skills.html">
-                                <h4 class="c_head">Life Skills</h4>
-                            </a>
-                            <p>20 Important Life Skills To Support Your Career Success</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.2s">
-                        <img src="../static/img/home_two/Lock_is_open.png" alt="">
-                        <div class="media-body">
-                            <a href="physical-health.html">
-                                <h4 class="c_head">Physical Health</h4>
-                            </a>
-                            <p>How to Connect Google Calendar With WordPress Contact Forms</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.4s">
-                        <img src="../static/img/home_two/Support.png" alt="">
-                        <div class="media-body">
-                            <a href="mental-health.html">
-                                <h4 class="c_head">Mental Health</h4>
-                            </a>
-                            <p>The Power of Physical Activity for Women's Health</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--    <section class="theme_doc_area bg_color sec_pad">-->
+<!--        <div class="container">-->
+<!--            <div class="section_title text-center">-->
+<!--                <h2 class="h_title wow fadeInUp">Blog</h2>-->
+<!--                <p class="wow fadeInUp" data-wow-delay="0.2s">An official blog about women's physical health and life skills</p>-->
+<!--            </div>-->
+<!--            <div class="row">-->
+<!--                <div class="col-lg-4 col-sm-6">-->
+<!--                    <div class="media theme_doc_item wow fadeInUp">-->
+<!--                        <img src="../static/img/home_two/cloud1.png" alt="">-->
+<!--                        <div class="media-body">-->
+<!--                            <a href="life-skills.html">-->
+<!--                                <h4 class="c_head">Life Skills</h4>-->
+<!--                            </a>-->
+<!--                            <p>20 Important Life Skills To Support Your Career Success</p>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-lg-4 col-sm-6">-->
+<!--                    <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.2s">-->
+<!--                        <img src="../static/img/home_two/Lock_is_open.png" alt="">-->
+<!--                        <div class="media-body">-->
+<!--                            <a href="physical-health.html">-->
+<!--                                <h4 class="c_head">Physical Health</h4>-->
+<!--                            </a>-->
+<!--                            <p>How to Connect Google Calendar With WordPress Contact Forms</p>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-lg-4 col-sm-6">-->
+<!--                    <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.4s">-->
+<!--                        <img src="../static/img/home_two/Support.png" alt="">-->
+<!--                        <div class="media-body">-->
+<!--                            <a href="mental-health.html">-->
+<!--                                <h4 class="c_head">Mental Health</h4>-->
+<!--                            </a>-->
+<!--                            <p>The Power of Physical Activity for Women's Health</p>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
 
 
 <!--    section for displaying forum post-->
-    <section class="theme_doc_area bg_color sec_pad">
-        <div class="container">
-            <div class="section_title text-center">
-                <h2 class="h_title wow fadeInUp">Forum</h2>
-                <p class="wow fadeInUp" data-wow-delay="0.2s">Some user posts in the forum.</p>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-sm-6">
-                    <div class="media theme_doc_item wow fadeInUp">
-                        <img src="../static/img/home_two/cloud1.png" alt="">
-                        <div class="media-body">
-                            <a href="#">
-                                <h4 class="c_head">Grow Your Business</h4>
-                            </a>
-                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.2s">
-                        <img src="../static/img/home_two/Lock_is_open.png" alt="">
-                        <div class="media-body">
-                            <a href="#">
-                                <h4 class="c_head">Knowledge Base</h4>
-                            </a>
-                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.4s">
-                        <img src="../static/img/home_two/Support.png" alt="">
-                        <div class="media-body">
-                            <a href="#">
-                                <h4 class="c_head">Online Support</h4>
-                            </a>
-                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--    <section class="theme_doc_area bg_color sec_pad">-->
+<!--        <div class="container">-->
+<!--            <div class="section_title text-center">-->
+<!--                <h2 class="h_title wow fadeInUp">Forum</h2>-->
+<!--                <p class="wow fadeInUp" data-wow-delay="0.2s">Some user posts in the forum.</p>-->
+<!--            </div>-->
+<!--            <div class="row">-->
+<!--                <div class="col-lg-4 col-sm-6">-->
+<!--                    <div class="media theme_doc_item wow fadeInUp">-->
+<!--                        <img src="../static/img/home_two/cloud1.png" alt="">-->
+<!--                        <div class="media-body">-->
+<!--                            <a href="#">-->
+<!--                                <h4 class="c_head">Grow Your Business</h4>-->
+<!--                            </a>-->
+<!--                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-lg-4 col-sm-6">-->
+<!--                    <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.2s">-->
+<!--                        <img src="../static/img/home_two/Lock_is_open.png" alt="">-->
+<!--                        <div class="media-body">-->
+<!--                            <a href="#">-->
+<!--                                <h4 class="c_head">Knowledge Base</h4>-->
+<!--                            </a>-->
+<!--                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-lg-4 col-sm-6">-->
+<!--                    <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.4s">-->
+<!--                        <img src="../static/img/home_two/Support.png" alt="">-->
+<!--                        <div class="media-body">-->
+<!--                            <a href="#">-->
+<!--                                <h4 class="c_head">Online Support</h4>-->
+<!--                            </a>-->
+<!--                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
 
 
 
@@ -460,7 +460,7 @@
                         <h4>Contact Us</h4>
                         <p>The team that created HerBlossom,
                             and the original intention of creating HerBlossom</p>
-                        <a href="Aboutus.html" class="learn_btn c_blue">Go To Contact Us<i class="arrow_right"></i></a>
+                        <a href="contact.html" class="learn_btn c_blue">Go To Contact Us<i class="arrow_right"></i></a>
                     </div>
 <!--                </div>-->
 <!--                <div class="col-sm-6">-->
