update about us link

--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -178,7 +178,7 @@
 
 
                 <div class="card">
-                    <a class="index-jump-aboutus" href="/about-us">About Us <i class="arrow_right"></i></a>
+                    <a class="index-jump-aboutus" href="aboutus.html">About Us <i class="arrow_right"></i></a>
                     <p class="index-little-white" data-wow-delay="0.2s">Click to learn more about us.</p>
                 </div>
 
