change the background color

--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -107,7 +107,7 @@
         </nav>
 
     <!--                anto change the pages-->
-    <section class="carousel-section" style="padding: 50px 0; background-color: #f8f9fa;">
+    <section class="carousel-section" style="padding: 50px 0; background-color: #f8c8d8;">
         <div class="container">
             <div class="section_title text-center">
                 <h2 class="h_title wow fadeInUp">Main Function</h2>
