--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -73,7 +73,7 @@
                                aria-haspopup="true" aria-expanded="false">Blog</a>
                         </li>
                         <li class="nav-item dropdown submenu mega_menu tab-demo">
-                            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
+                            <a href="/job-recommendation" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
                                aria-haspopup="true" aria-expanded="false">Job Recommendation</a>
                         </li>
                         <li class="nav-item dropdown submenu">
@@ -471,7 +471,7 @@
                                 <li><a href="signin.html">Sign In</a></li>
                                 <li><a href="blog.html">Blog</a></li>
                                 <li><a href="forums.html">Forum</a></li>
-                                <li><a href="#">Job Recommendation</a></li>
+                                <li><a href="job-recommendation.html">Job Recommendation</a></li>
 
 <!--                                <li><a href="changelog.html">Changelog</a></li>-->
 <!--                                <li><a href="Onepage.html">Onepage Docs</a></li>-->
